# Ruxy

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Src/: blacklist.py  config.py  main.py  utility.py
Src/Examples/: hello.rux  variable_decl.rux
Src/commands/: bot_utility.py  examples.py  fun.py  github.py  moderation.py  owner.py  user.py  utility.py
